支持一键添加音乐库所有音乐到播放列表

--- a/app/src/main/res/layout/fragment_music_library.xml
+++ b/app/src/main/res/layout/fragment_music_library.xml
@@ -7,6 +7,14 @@
     <ListView
         android:id="@+id/music_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <Button
+        android:id="@+id/btn_add_all"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="一键添加所有到播放列表"
+        android:layout_margin="16dp" />
 
 </LinearLayout>
