增加我的喜欢，可设置喜欢播放列表的音乐

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,4 +17,10 @@
         android:layout_height="wrap_content"
         android:text="音乐库" />
 
+    <Button
+        android:id="@+id/btn_favorite"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="我的喜欢" />
+
 </LinearLayout>
