全屏播放支持设置喜欢

--- a/app/src/main/res/layout/activity_full_screen_player.xml
+++ b/app/src/main/res/layout/activity_full_screen_player.xml
@@ -110,6 +110,14 @@
             android:src="@drawable/ic_next"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/full_screen_favorite_button"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_favorite_border"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:tint="@null" />
     </LinearLayout>
 
     <ImageButton
