--- a/app/src/main/res/layout/activity_full_screen_player.xml
+++ b/app/src/main/res/layout/activity_full_screen_player.xml
@@ -110,6 +110,14 @@
             android:src="@drawable/ic_next"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@color/black" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
 
         <ImageButton
             android:id="@+id/full_screen_favorite_button"
@@ -119,24 +127,23 @@
             android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@null" />
 
-        <!-- 新增加入歌单按钮 -->
         <ImageButton
             android:id="@+id/full_screen_add_to_playlist_button"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:src="@drawable/ic_playlist_add"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:tint="@color/black" />
+
+        <ImageButton
+            android:id="@+id/full_screen_play_mode_button"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:src="@drawable/ic_repeat"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:tint="@color/black" />
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/full_screen_play_mode_button"
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:src="@drawable/ic_repeat"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:layout_gravity="center"
-        android:layout_marginTop="32dp"
-        android:tint="@color/black" />
 
 </LinearLayout>
